--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "redux": "^4.1.2",
     "redux-action": "^1.2.2",
     "redux-actions": "^2.6.5",
+    "redux-logger": "^3.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
